feat: added automatic versionnig

--- a/projects/ngx-statewise/package.json
+++ b/projects/ngx-statewise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-statewise",
-  "version": "0.2.18",
+  "version": "0.2.19",
   "description": "A lightweight and intuitive state management for Angular. Simpler than NgRx, more structured than DIY.",
   "peerDependencies": {
     "@angular/common": "^19.2.0",
@@ -12,22 +12,47 @@
   },
   "keywords": [
     "angular",
-    "ngx",
-    "state",
-    "state-management",
-    "store",
     "angular-state",
     "angular-store",
-    "effects",
-    "actions",
-    "state-updates",
-    "lightweight",
+    "angular-signals",
+    "angular-architecture",
+    "angular-effects",
+    "angular-actions",
+    "angular-library",
+    "signals",
+    "signal-store",
+    "signal-based",
+    "reactivity",
     "rxjs",
-    "stateful",
+    "observable",
+    "lightweight",
+    "modular",
+    "scalable",
+    "intuitive",
+    "clean-architecture",
+    "ngrx",
+    "ngxs",
     "ngrx-alternative",
     "ngxs-alternative",
+    "store",
+    "frontend-state",
+    "state",
+    "statemanagement-angular",
+    "state-management",
+    "state-updates",
+    "state-updators",
+    "state-store",
+    "effects",
+    "actions",
+    "action-based",
+    "action-driven",
+    "stateful",
     "typescript",
-    "angular-library"
+    "typescript-library",
+    "frontend",
+    "frontend-architecture",
+    "ngx",
+    "ngx-statewise"
   ],
   "license": "GPL-3.0",
   "dependencies": {
