--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky",
-    "release:ngx-statewise": "standard-version"
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +29,8 @@
     "@angular-devkit/build-angular": "^19.2.7",
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.0",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/jasmine": "~5.1.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.6.0",
@@ -39,7 +40,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^19.2.0",
-    "standard-version": "^9.5.0",
     "typescript": "~5.7.2"
   }
 }
