--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^19.2.0",
+    "semantic-release": "^24.2.3",
     "typescript": "~5.7.2"
   }
 }
