--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo"
   },
   "type": "module",
   "private": true,
+  "workspaces": [
+    "projects/*"
+  ],
   "dependencies": {
     "@angular/cdk": "^19.2.9",
     "@angular/common": "^19.2.0",
@@ -32,6 +36,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@semantic-release/git": "^10.0.1",
     "@types/jasmine": "~5.1.0",
     "husky": "^9.1.7",
     "jasmine-core": "~5.6.0",
@@ -40,8 +45,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lerna": "^8.2.2",
     "ng-packagr": "^19.2.0",
     "semantic-release": "^24.2.3",
+    "semantic-release-monorepo": "^8.0.2",
     "typescript": "~5.7.2"
   }
 }
