--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -5,6 +5,11 @@ on:
     branches: [main, next]
   workflow_dispatch:
 
+permissions:
+  contents: write 
+  packages: write  
+  id-token: write  
+
 jobs:
   version:
     runs-on: ubuntu-latest
@@ -19,7 +24,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '22.13.1'
           cache: 'npm'
       
       - name: Install dependencies
@@ -34,3 +39,6 @@ jobs:
         run: |
           chmod +x ./scripts/version-by-branch.sh
           ./scripts/version-by-branch.sh
+      
+      - name: Push changes and tags
+        run: git push --follow-tags
