--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -28,11 +28,10 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
-
+        run: |
+          npm ci
+          npm install -g @angular/cli
+          
       - name: Configure Git user
         run: |
           git config --global user.name "GitHub Actions"
