chore(ngx-statewise-showcase): wip

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "ngx-statewise": ["./dist/ngx-statewise"],
       "@shared/*": ["./projects/ngx-statewise-showcase/src/app/shared/*"],
+      "@assets/*": ["./projects/ngx-statewise-showcase/src/assets/*"],
       "@app/*": ["./projects/ngx-statewise-showcase/src/app/*"],
       "@themes/*": [
         "./projects/ngx-statewise-showcase/src/assets/styles/themes/*"
