--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+environment.ts
+environment.development.ts
+
 # Compiled output
 /dist
 /tmp
