--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -42,6 +42,15 @@ jobs:
         run: |
           node .scripts/determine-changed-libs.js
           echo "changed_libraries=$(cat changed-libs-output.txt)" >> $GITHUB_OUTPUT
+          if [[ "$OUTPUT" == *"No changed packages"* ]]; then
+            echo "changed_libraries=" >> $GITHUB_ENV
+            echo "No packages changed."
+          else
+            echo "$OUTPUT" > changed-libs.json
+            LIBS=$(echo "$OUTPUT" | jq -r '.[].name' | paste -sd "," -)
+            echo "changed_libraries=$LIBS" >> $GITHUB_ENV
+            echo "$LIBS" > changed-libs-output.txt
+          fi
 
       - name: Run versioning script
         if: steps.changed-libs.outputs.changed_libraries != ''
