--- a/projects/ngx-statewise/package.json
+++ b/projects/ngx-statewise/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "description": "A lightweight and intuitive state management for Angular. Simpler than NgRx, more structured than DIY.",
   "peerDependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/core": "^19.2.0"
+    "@angular/common": "^19.2.0 || ^20.0.0",
+    "@angular/core": "^19.2.0 || ^20.0.0"
   },
   "repository": {
     "type": "git",
